examples/errors/not_declared.dfg
print "==== DEBUT ====";

let temps = T;

print "===== FIN =====";